--- a/index.html
+++ b/index.html
@@ -8,20 +8,22 @@
   </head>
   <body>
     <div class="banner">
-      <div class="overhead site-container">
-        <div class="company-id">
-          <img src="./resources/images/logo-white.png">
-          <p>Tortoiseshell Optics</p>
-        </div>
-        <nav>
-          <ul>
-            <li>Services</li>
-            <li>Products</li>
-            <li>Contact</li>
-          </ul>
-        </nav>
-      </div>
       <div class="site-container">
+        <div class="overhead">
+          <div class="company-id">
+            <img src="./resources/images/logo-white.png" class="company-id-image">
+            <p>Tortoiseshell Optics</p>
+          </div>
+          <nav>
+            <ul>
+              <li>Services</li>
+              <li>Products</li>
+              <li>Contact</li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+      <div class="card-container site-container">
         <div class="motto-card">
             <h1>Don't Just Look, See.</h1>
         </div>
@@ -51,29 +53,31 @@
     </div>
     <div class="site-container">
       <div class="quick-hits-grid">
-      <div class="quick-hit">
-        <div class="quick-hit-title">
-          <h4>Philosophy</h4>
+        <div class="quick-hit">
+          <div class="quick-hit-title">
+            <h4>Philosophy</h4>
+          </div>
+          <div class="quick-hit-info">
+            <p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your vision that makes ours.</p>
+          </div>
         </div>
-        <div class="quick-hit-info">
-          <p>Over 75% of our brains are dedicated to one sense: vision. We believe everyone deserves to see the world, not matter what. That’s why we offer eye exams, custom fittings, and quick delivery at a low cost. It’s your vision that makes ours.</p>
+        <div class="quick-hit">
+          <div class="quick-hit-title">
+            <h4>Appointments</h4>
+          </div>
+          <div class="quick-hit-info">
+            <h4>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</h4>
+          </div>
         </div>
       </div>
-      <div class="quick-hit">
-        <div class="quick-hit-title">
-          <h4>Appointments</h4>
-        </div>
-        <div class="quick-hit-info">
-          <h4>Schedule an appointment by calling us at (312) 654-0987. We’re open Tuesday - Saturday, 9AM - 6PM.</h4>
-        </div>
-      </div>
-    </div>
     </div>
   </body>
   <footer>
-    <div class="footer-items">
-      <img src="">
-      <p>Copyright Tortoiseshell Optics</p>
+    <div class="site-container">
+      <div class="footer-items">
+        <img src="./resources/images/logo-black.png" class="company-id-image">
+        <p>Copyright Tortoiseshell Optics</p>
+      </div>
     </div>
   </footer>
 </html>
