Finish design and development

--- a/index.html
+++ b/index.html
@@ -12,14 +12,15 @@
         <div class="overhead">
           <div class="company-id">
             <img src="./resources/images/logo-white.png" class="company-id-image">
-            <p>Tortoiseshell Optics</p>
+            <p class="company-name">Tortoiseshell Optics</p>
           </div>
           <nav>
-            <ul>
+            <ul class="large-screen-nav-menu">
               <li>Services</li>
               <li>Products</li>
               <li>Contact</li>
             </ul>
+            <p class="small-screen-nav-menu">Menu</p>
           </nav>
         </div>
       </div>
@@ -76,7 +77,7 @@
     <div class="site-container">
       <div class="footer-items">
         <img src="./resources/images/logo-black.png" class="company-id-image">
-        <p>Copyright Tortoiseshell Optics</p>
+        <p class="company-name">Copyright Tortoiseshell Optics</p>
       </div>
     </div>
   </footer>
